--- a/template/README.md.jinja2
+++ b/template/README.md.jinja2
@@ -7,7 +7,7 @@
 {% if "secondaries" in licenses and licenses.secondaries | length > 0 -%}
 [![Licenses: ({{ licenses.primary }} OR {{  licenses.secondaries | join(" OR ") }})][license_badge]][license_url]
 {% else -%}
-[![License: {{ licenses.primary }})][license_badge]][license_url]
+[![License: {{ licenses.primary }}][license_badge]][license_url]
 {% endif -%}
 [![Changelog][changelog_badge]][changelog_badge_url]
 
@@ -42,7 +42,7 @@ This project is under following licenses (**OR**) :
   {%- endfor -%}
 {% else -%}
 This project is under [{{ licenses.primary }}][main_license].
-{% endif -%}
+{%- endif %}
 
 [main_license]: {{ licenseURL }}
 {% if "secondaries" in licenses and licenses.secondaries | length > 0 -%}
