⚡️(tpl/opentofu): Update some existing template file with opentofu template

--- a/template/devbox.json.jinja2
+++ b/template/devbox.json.jinja2
@@ -3,6 +3,10 @@
   "packages": {
     "pre-commit": "latest",
     "yq-go": "latest",
+    {%- if "opentofu" in templates %}
+    "opentofu": "latest",
+    "terraform-docs": "latest"
+    {%- endif %}
   },
   "shell": {
     "init_hook": [
